test/files/neg/t585.check
t585.scala:1: error: unclosed comment
/*
^
1 error
